devpod/traefik-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: devpod-ingress
  namespace: devpod
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`192.168.1.40`)
      priority: 10
      services:
        - name: argocd-server
          port: 3000
    - kind: Rule
      match: Host(`192.168.1.40`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default
